# nonogram

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  build.sh  manage.py  pyproject.toml
.github/workflows/: django.yml
jstoolchains/: package.json  tailwind.config.js
nonogram/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
nonogram/nonogram/: urls.py
puzzles/: apps.py  forms.py  image_utilities.py  models.py  puzzle_generator.py  tests.py  urls.py  views.py
puzzles/migrations/: 0001_initial.py  0002_nonogram_puzzle_solution.py  0003_nonogram_image.py  0004_alter_nonogram_difficulty_level.py  0005_alter_nonogram_puzzle_solution.py
puzzles/templates/: basic.html
puzzles/templates/puzzles/: index.html  instruction.html  puzzle_detail.html  puzzle_generator.html  puzzles_list.html
static/css/: input.css  output.css
static/js/: checkSolution.js  createGrid.js  gridInteraction.js  main.js  preview.js  render.js
templates/: 404.html  500.html  base.html
theme/static_src/: package-lock.json
